@@ -1,13 +1,0 @@
-<assembly xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.3" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.3 http://maven.apache.org/xsd/assembly-1.1.3.xsd">
-   <id>templates-resources</id>
-   <formats>
-      <format>zip</format>
-   </formats>
-   <includeBaseDirectory>false</includeBaseDirectory>
-   <fileSets>
-      <fileSet>
-         <directory>src/templates/</directory>
-         <outputDirectory>files/templates/</outputDirectory>
-      </fileSet>
-   </fileSets>
-</assembly>
