@@ -1,6 +1,0 @@
-<div id="m-attributions-container" class="m-control m-container m-attributions">
-    <button id='close-button' class="{{icon}}"></button>
-    <header>
-        <h1>Attributions</h1>
-    </header>
-</div>
