@@ -1,6 +1,0 @@
-<div id="div-contenedor" class="m-control m-container m-background">
-    {{#each layers}}
-        <button class="m-background-group-btn" id="m-baselayerselector-{{this.id}}" title="Selección de capa de fondo">{{{this.title}}}</button>
-    {{/each}}
-    <button class="m-background-unique-btn" id="m-baselayerselector-unique-btn" title="Selección de capa de fondo"></button>
-</div>
