@@ -1,14 +1,0 @@
-<div class="m-dialog {{severity}}">
-   <div class="m-modal">
-      <div class="m-content">
-         <div class="m-title">
-            <i class="m-icon"></i>
-            <span tabindex="{{order}}" role="heading">{{{title}}}</span>
-         </div>
-         <div tabindex="{{order}}" role="main" class="m-message">{{{message}}}</div>
-         <div class="m-button">
-            <button tabindex="{{order}}" type="button">OK</button>
-         </div>
-      </div>
-   </div>
-</div>
