@@ -1,3 +1,0 @@
-<div class="m-control m-getfeatureinfo-container" id="infoGetFeature">
-    <button id="m-getfeatureinfo-button" class="g-cartografia-info" title="{{title}}"></button>
-</div>
