@@ -1,3 +1,0 @@
-<div class="m-getfeatureinfo-content">
-   {{{info}}}
-</div>
