@@ -1,4 +1,0 @@
-<div class="m-kml-content">
-   <p class="m-kml-name">{{{name}}}</p>
-   <div class="m-kml-desc">{{{desc}}}</div>
-</div>
