@@ -1,3 +1,0 @@
-<div class="m-control m-location-container" title="{{title}}">
-    <button id="m-location-button" class="g-cartografia-gps2"></button>
-</div>
