@@ -1,4 +1,0 @@
-<div class="m-panel">
-   <button class="m-panel-btn"></button>
-   <div class="m-panel-controls"></div>
-</div>
