@@ -1,3 +1,0 @@
-<div class="m-control m-rotate-container">
-    <button id="m-rotate-button" class="g-cartografia-brujula-norte" title="{{title}}"></button>
-</div>
