@@ -1,12 +1,0 @@
-<div 
-    role="button" 
-    tabindex="{{order}}" 
-    class="m-control m-scale-container" 
-    title="Control {{title}}"
-    >
-    <div role="text" class="m-level">{{level}} </div>
-    <div role="text" id="m-level-number"></div>
-    <span class="m-scale-separator"> | </span>
-    <div role="text" class="m-unit">{{scale}} = 1 : </div>
-    <div role="text" class="m-scale" id="m-scale-span"></div>
-</div>
