@@ -1,5 +1,0 @@
-<div class="m-toast {{severity}}">
-    <span class="{{icon}}"></span>
-    <div class="m-toast-message" tabindex="{{order}}">{{{message}}}</div>
-    <button type="button" class="g-cartografia-cancelar m-toast-button" tabindex="{{order}}" title="{{translations.close}}"></button>
-</div>
