@@ -10,3 +10,5 @@
 - Actualización y eliminación de librerías del fichero package.json
 - Eliminación de la configuración de TEMPLATES_PATH y métodos getTemplateUrl, get y compile.
 - Añade nuevo control Implementation Switcher.
+- Eliminación y configuración de pefiles de compilación.
+- Eliminación de plantillas de /files/templates y /templates dentro del war.
